[gd_scene load_steps=5 format=3 uid="uid://cj3exco8pbdh7"]

[ext_resource type="Texture2D" uid="uid://tmo3ijcibewl" path="res://Scenes/Guy/Archetypes/Swordsman/Sheets/swordsman_stab-Sheet.png" id="1_ogbdo"]
[ext_resource type="Script" uid="uid://c0ww8hb384pwm" path="res://Scenes/Guy/FightingFrames/fightingFrames.gd" id="2_texl7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_drk25"]
radius = 6.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1jq7i"]
radius = 6.0
height = 24.0

[node name="FightingFrames" type="Sprite2D"]
texture = ExtResource("1_ogbdo")
region_enabled = true
region_rect = Rect2(324, 0, 36, 24)
script = ExtResource("2_texl7")
sprite_sheet = ExtResource("1_ogbdo")
texture_size = Vector2i(36, 24)
playing = true
frames_per_second = 48
first_frame_index = 4
last_frame_index = 10
current_frame_index = 9
hitbox_radius = 1.5
hitbox_height = 12.0
hitbox_rotation = 90.0
hitbox_positions = Array[Vector2]([Vector2(-2.5, -2.5), Vector2(-3, -2.5), Vector2(-4, -2.5), Vector2(-9, -1.5), Vector2(-12, -2.5), Vector2(-12, -3.5), Vector2(-12, -4.5)])
hurtbox_radius = 4.0
hurtbox_height = 20.0
hurtbox_positions = Array[Vector2]([Vector2(3, 1), Vector2(2, 1), Vector2(1, 1), Vector2(1, 1), Vector2(2, 1)])

[node name="hitBox" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(-12, -3.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_drk25")
debug_color = Color(0.982366, 0.029952, 0.33587, 0.42)

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_1jq7i")
